some improvements to expansion of Shape API