@@ -8,9 +8,7 @@ import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.UnmodifiableView;
 
-import java.util.Iterator;
-import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.*;
 
 /**
  * See https://wiki.vg/Entity_metadata#Mobs_2
@@ -36,7 +34,7 @@ public final class BoundingBox implements Shape {
 
     @Override
     public @UnmodifiableView @NotNull List<BoundingBox> boundingBoxes() {
-        return List.of(this);
+        return Collections.emptyList();
     }
 
     @Override
